2002-08-13  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/acknowledge.dox: Minor updates.

2002-08-13  Theodore A. Roth  <troth@verinet.com>

	* libc/string/memset.S: Fix dox comment (s/src/dest/).

2002-08-12  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.

2002-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* crt1/gcrt1.S: avr-gcc >= 3.3 is required.
	* avr-libc.spec.in: avr-gcc >= 3.3 is required.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add a subsection about _BV().

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io.h: add documentation.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: Black magic to split a long table.
	* doc/api/interrupts.dox: minor changes and additions.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* domake: Allow for environmental override of ${MAKE}.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* reconf: Extend the automake/autoconf checks to allow for
		customized executable names for the versions required.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* reconf: Check for correct versions of automake/autoconf.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* .cvsignore: New file.
	* crt1/.cvsignore: New file.
	* doc/.cvsignore: New file.
	* doc/api/.cvsignore: New file.
	* libc/.cvsignore: New file.
	* libc/misc/.cvsignore: New file.
	* libc/pmstring/.cvsignore: New file.
	* libc/stdlib/.cvsignore: New file.
	* libc/string/.cvsignore: New file.
	* libm/.cvsignore: New file.
	* libm/fplib/.cvsignore: New file.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(EXTRA_DIST): Add new dox files.
	* doc/api/interrupts.dox: New file.
	* doc/api/acknowledge.dox: New file.
	* include/avr/interrupt.h: Added doxy comments.
	* include/avr/signal.h: Updated doxy comments.

2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
