@@ -1,5 +1,9 @@
 2002-08-13  Theodore A. Roth  <troth@verinet.com>
 
+	* doc/api/doxygen.config.in: Updated to use doxygen-1.2.17.
+
+2002-08-13  Theodore A. Roth  <troth@verinet.com>
+
 	* configure.in(AM_INIT_AUTOMAKE): Bump version.
 	* doc/api/acknowledge.dox: Minor updates.
 
